--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,10 @@
 buildscript {
     repositories {
         jcenter()
-		//flatDir dirs: 'C:/dev/test/HelloWorldTransformTest/MyTransform/build/libs'
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
-		//classpath 'com.example:MyTransform:0.1+'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
