--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,7 +1,8 @@
 repositories {
 	jcenter()
+	google()
 }
 dependencies {
-    compile 'com.android.tools.build:transform-api:1.5.0'
-	compile 'commons-io:commons-io:2.4'
+    implementation 'com.android.tools.build:gradle-api:3.0.0-beta6'
+    implementation 'commons-io:commons-io:2.4'
 }
